Documentation prices routes
